mudança na nala

--- a/nala.html
+++ b/nala.html
@@ -8,6 +8,6 @@
 <body>
     <h1>Nala é fofa</h1>
     <h2>bem gordinha e redonda bem gorda</h2>
-    <h3>ela come muito e nao treina</h3>
+    <h3>ela come muito e nao treina e peida muito</h3>
 </body>
 </html>
